[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/ThrowingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/enemy2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.75964, 1.4668 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.7747, 3.74355 )

[node name="ThrowingEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="StateTimer" type="Timer" parent="."]
process_mode = 0
autostart = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
